fix: корректно обрабатывать ошибки и остановку HubEventProcessor